--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body{
 
 .first-box{
     width:100%;
-    height: 80vh;
+    height: 85vh;
     float: left;
-   background-image: url('images/banner.jpg');
+   background-image: url('images/top-banner.jpg');
     background-position:center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -27,8 +27,8 @@ body{
 .shadow-box2{
     width: 100%;
     float: left;
-    height: 80vh;
-    background: rgba(67, 67, 67, 0.5) 
+    height: 85vh;
+    background: rgba(3, 3, 3, 0.7) 
 }
 
 .creating-text{
@@ -190,7 +190,7 @@ body{
 .shadow-box{
     width: 100%;
     float: left;
-    height: 610px;
+    height: 100vh;
     background: rgba(45, 45, 45, 0.5) ;
     visibility: hidden;
     cursor: pointer; 
@@ -221,6 +221,22 @@ body{
     font-weight: 600;
     margin-left: 30px;
 
+ }
+ .work-text a:hover{
+    color: rgb(213, 205, 213);
+ }
+
+
+
+ .footer-box{
+    width: 100%;
+    float: left;
+    background-color: rgb(28, 27, 27);
+    padding: 50px;
+    font-size: 17px;
+    font-weight: 500;
+    color: rgb(193, 187, 187);
+    text-align: center;
  }
 
 
