--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 .creating-text{
     font-size: 17px;
     font-weight: 500;
-    color: rgb(152, 151, 151);
+    color: rgb(193, 193, 193);
     margin-top: 10%;
     margin-left: 30px;
 }
@@ -60,7 +60,8 @@ body{
 .second-box{
     width: 100%;
     float: left;
-    padding: 33px;
+    padding: 35px;
+    padding-bottom: 0px;
 }
 
 .left-box{
